[package]
name = "escpos-rs"
version = "0.1.0"
license = "MIT"
description = "Control esc/pos printers with rust"
repository = "https://github.com/Malanche/escpos-rs.git"
authors = ["Carlos Malanche <carlos.malanche.f@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]