[package]
name = "escpos-rs"
version = "0.2.1"
license = "MIT"
description = "Control esc/pos printers with rust"
repository = "https://github.com/Malanche/escpos-rs.git"
authors = ["Carlos Malanche <carlos.malanche.f@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libusb = "0.3.0"
log = "0.4.14"
serde = {version = "1.0.117", features = ["derive"]}
codepage-437 = "0.1.0"
image = "0.23.14"
base64 = "0.13.0"
qrcode = "0.12.0"